Update tagline and bio

--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -8,7 +8,7 @@ interface Props {
 
 const {
   title = "Sabine Emden: Portfolio",
-  description = "Hello! My name is Sabine. I'm an aspiring web developer and a former chemist. This is my portfolio website.",
+  description = "Hello! My name is Sabine. I'm an aspiring web developer who is trained as a chemist. This is my portfolio website.",
 } = Astro.props;
 ---
 
