--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,7 +7,7 @@ import Hero from "../components/Hero.astro";
 
 <BaseLayout
   title="About | Sabine Emden"
-  description="I'm an aspiring web developer and a former chemist. What I bring from chemistry to software development is a systematic approach to problem solving."
+  description="I'm an aspiring web developer who is trained as a chemist. What I bring from chemistry to software development is a systematic approach to problem solving."
 >
   <div class="stack gap-20">
     <main class="wrapper about">
@@ -24,9 +24,9 @@ import Hero from "../components/Hero.astro";
         <h2 class="section-title">Background</h2>
         <div class="content">
           <p>
-            I'm an self-taught web developer and a former chemist. What I bring
-            from chemistry to software development is a systematic approach to
-            problem solving and the grit not to give up easily.
+            I'm an self-taught web developer and who is trained as a chemist.
+            What I bring from chemistry to software development is a systematic
+            approach to problem solving and the grit not to give up easily.
           </p>
           <p>
             I'm currently learning full-stack JavaScript with <a
@@ -39,11 +39,11 @@ import Hero from "../components/Hero.astro";
             > as a side project.
           </p>
           <p>
-            As a former chemist, I have over 6 years of laboratory experience
-            and over 4 years of experience in project management supporting
-            product development and order fulfillment. I'm dependable,
-            detail-oriented with strong organizational skills, and bilingual in
-            English and German.
+            As a chemist, I have over 6 years of laboratory experience and over
+            4 years of experience in project management supporting product
+            development and order fulfillment. I'm dependable, detail-oriented
+            with strong organizational skills, and bilingual in English and
+            German.
           </p>
         </div>
       </section>
