Fix typos and make minor changes on About page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,12 +6,15 @@ import Hero from "../components/Hero.astro";
 ---
 
 <BaseLayout
-  title="About | Sabine Emden"
+  title="About Me | Sabine Emden"
   description="I'm an aspiring web developer who is trained as a chemist. What I bring from chemistry to software development is a systematic approach to problem solving."
 >
   <div class="stack gap-20">
     <main class="wrapper about">
-      <Hero title="About Me" tagline="Aspiring full-stack JavaScript developer">
+      <Hero
+        title="About Me"
+        tagline="Thanks for stopping by! Read below to learn more about myself and my background."
+      >
         <img
           width="1553"
           height="873"
@@ -24,8 +27,8 @@ import Hero from "../components/Hero.astro";
         <h2 class="section-title">Background</h2>
         <div class="content">
           <p>
-            I'm an self-taught web developer and who is trained as a chemist.
-            What I bring from chemistry to software development is a systematic
+            I'm a self-taught web developer who is trained as a chemist. What I
+            bring from chemistry to software development is a systematic
             approach to problem solving and the grit not to give up easily.
           </p>
           <p>
