--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -18,8 +18,8 @@ import Hero from "../components/Hero.astro";
         <img
           width="1553"
           height="873"
-          src="/assets/at-work.jpg"
-          alt="Jeanine White at work with a colleague"
+          src="/assets/mountain-view.jpg"
+          alt="Sabine in front of a mountain view in the German Alps"
         />
       </Hero>
 
