Underline links in page footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -31,14 +31,14 @@ const currentYear = new Date().getFullYear();
 
   footer a {
     color: var(--gray-400);
-    text-decoration: 1px solid underline transparent;
+    text-decoration: 1px solid underline currentColor;
     text-underline-offset: 0.25em;
     transition: text-decoration-color var(--theme-transition);
   }
 
   footer a:hover,
   footer a:focus {
-    text-decoration-color: currentColor;
+    text-decoration-color: var(--accent-regular);
   }
 
   .group {
